# mypy_repro

./: README.md
bazel_mypy/: .gitignore  BUILD.bazel  WORKSPACE.bazel  mypy-requirements.in  mypy-requirements_lock.txt  requirements.in  requirements_lock.txt
bazel_mypy/api/: BUILD.bazel
bazel_mypy/bazel/: deps.bzl  pypi_repos.bzl  repos.bzl
venv_mypy/: .gitignore  main.py  mypy.ini  requirements.in  run.sh
venv_mypy/api/: test.proto
