workspace(name = "test_mypy_integration")

load("//bazel:repos.bzl", "repos")

repos()

load("//bazel:py_toolchains.bzl", py_toolchains = "py_toolchains")

py_toolchains()

load("//bazel:pypi_repos.bzl", pypi_repos = "pypi_repos")

pypi_repos()

load("//bazel:deps.bzl", "deps")

deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()
