load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
)

py_proto_library(
    name = "test_proto_py",
    deps = [":test_proto"],
    visibility = ["//visibility:public"],
)